[gd_scene load_steps=8 format=3 uid="uid://cyofkd801gjyg"]

[ext_resource type="Theme" uid="uid://d2hv2jx01084f" path="res://mainTheme.tres" id="1_q0ijb"]
[ext_resource type="Script" path="res://Scenes/TriggerWarning/Audio.gd" id="2_kswra"]
[ext_resource type="Script" path="res://Scenes/TriggerWarning/Confusion.gd" id="2_l4w44"]
[ext_resource type="Script" path="res://Scenes/TriggerWarning/Buglessnes.gd" id="2_s3yi5"]
[ext_resource type="Script" path="res://Scenes/TriggerWarning/TrueLove.gd" id="3_1xlc7"]
[ext_resource type="Script" path="res://Scenes/TriggerWarning/FadeIn.gd" id="4_kgqfq"]

[sub_resource type="GDScript" id="GDScript_qcivd"]
script/source = "extends VBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="TriggerWarning" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q0ijb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_qcivd")

[node name="Headline" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="VBoxContainer/Headline"]
layout_mode = 2
text = "Trigger Warning:"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Headline"]
layout_mode = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_kgqfq")
fadetime = 4.0
startdelay = 0

[node name="Confusion" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="Button" type="Button" parent="VBoxContainer/Confusion"]
layout_mode = 2
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Confusion"
flat = true
alignment = 0
script = ExtResource("2_l4w44")

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Confusion"]
layout_mode = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_kgqfq")
startdelay = 2

[node name="True Love" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="Button" type="Button" parent="VBoxContainer/True Love"]
layout_mode = 2
shortcut_feedback = false
shortcut_in_tooltip = false
text = "True Love"
flat = true
alignment = 0
script = ExtResource("3_1xlc7")

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/True Love"]
layout_mode = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_kgqfq")
startdelay = 4

[node name="Audio" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="Button" type="Button" parent="VBoxContainer/Audio"]
layout_mode = 2
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Audio"
flat = true
alignment = 0
script = ExtResource("2_kswra")

[node name="AudioFade" type="ColorRect" parent="VBoxContainer/Audio"]
layout_mode = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_kgqfq")
startdelay = 6

[node name="Buglessnes" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="Button" type="Button" parent="VBoxContainer/Buglessnes"]
layout_mode = 2
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Buglessnes"
flat = true
alignment = 0
script = ExtResource("2_s3yi5")

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Buglessnes"]
layout_mode = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_kgqfq")
startdelay = 8

[node name="FadeOut" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.0156863)

[connection signal="pressed" from="VBoxContainer/Confusion/Button" to="VBoxContainer/Confusion/Button" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/True Love/Button" to="VBoxContainer/True Love/Button" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio/Button" to="VBoxContainer/Audio/Button" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Buglessnes/Button" to="VBoxContainer/Buglessnes/Button" method="_on_pressed"]
